--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,12 +1,9 @@
-<div class="flex justify-evenly items-center text-white" style="background-color: rgb(41, 39, 39);">
-    <a href="/" class="text-2xl">Blogify</a>
-    <a href="/">Home</a>
+<div class="flex justify-center items-center text-black  text-sm w-full h-12 gap-4 p-8">
+    <a href="/" class="h-full">Home</a>
+    <a href="/blog/all" class="h-full">All blog</a>
     <%if(locals.user){%>
-        <a href="/blog/add">Add blog</a>
-        <a href="">Profile</a>
-        <a href="/user/logout">logOut</a>
+        <a href="/user/logout" class="h-full">LogOut</a>
     <%}else{%>
-        <a href="/user/signup">SignUp</a>
-        <a href="/user/signin">SignIn</a>
+        <a href="/user/signin" class="h-full">SignIn</a>
     <%}%>
 </div>
