--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -4,13 +4,15 @@
     <%-include('./partials/head')%>
     <title>Document</title>
 </head>
-<body class="p-2">
-    <%-include('./partials/navbar')%>
-    <h1 class="text-6xl text-center mt-4 ">signIn page!</h1>
-    <form action="/user/signin" method="post" class="flex flex-col justify-center items-center border-1 w-[80%] h-[20rem] mx-auto mt-10 rounded-md text-xs p-16">
-        <input type="text" name="email" id="" placeholder="enter your email:" required class="p-1 m-2 w-full text-center">
-        <input type="text" name="password" id="" placeholder="enter your password" required class="p-1 m-2 w-full text-center">
-        <button type="submit" class="text-lg font-bold">sign-in</button>
+<body class="flex flex-col justify-center items-center p-4 ">
+    <!-- <%-include('./partials/navbar')%> -->
+    <form action="/user/signin" method="post" class="flex flex-col justify-center items-center border  w-[20%] h-[75%] mx-auto mt-10 rounded-lg shadow-2xl text-xs p-12 bg-black text-white backdrop-blur-md">
+        <h1 class="font-bold text-4xl w-full leading-relaxed">Welcome back!</h1>
+        <label for="email" class="w-full m-2 font-light text-left">Email</label>
+        <input type="text" name="email" id=""  required class="p-1 m-2 w-full   border-b-2 bg-black focus:outline-none">
+        <label for="email" class="w-full m-2 font-light text-left">Password</label>
+        <input type="text" name="password" id="" placeholder="" required class="p-1 m-2 w-full border-b-2 bg-black focus:outline-none">
+        <button type="submit" class="text-lg hover:text-4xl hover:text-red-600 font-bold">sign-in</button>
     </form>
     <%if(locals.msg){%>
         <p><%=msg%></p>
