fixed ATLAS connectivity issues

--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -9,7 +9,7 @@
      <form action="/user/signup" method="post" class="flex flex-col justify-center items-center  w-[20%] h-[75%]  mx-auto  mt-10 rounded-lg text-xs p-16 shadow-2xl bg-black text-white">
         <h1 class="font-bold text-4xl ">New user!</h1>
         <label for="fullName" class="w-full m-2 font-light text-left">fullName</label>
-        <input type="text" name="FullName" id=""  required class="p-1 m-2 w-full   border-b-2 bg-black focus:outline-none">
+        <input type="text" name="fullName" id=""  required class="p-1 m-2 w-full   border-b-2 bg-black focus:outline-none">
         <label for="email" class="w-full m-2 font-light text-left">Email</label>
         <input type="text" name="email" id=""  required class="p-1 m-2 w-full   border-b-2 bg-black focus:outline-none">
         <label for="password" class="w-full m-2 font-light text-left">Password</label>
